Fix Page Alignment

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,4 +4,5 @@
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 20px;
+  margin: 0 auto;
 }
